--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,8 @@
 
 html,
 body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	overflow: hidden; /* evita rolagem indesejada */
+	min-height: 100vh;
+	overflow-y: auto;
 }
 
 :root {
